--- a/app/src/main/res/layout/activity_formular09.xml
+++ b/app/src/main/res/layout/activity_formular09.xml
@@ -23,19 +23,6 @@
         android:textAlignment="center"
         android:id="@+id/textView_ausland" />
 
-    <Button
-        android:text="NEIN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/button_ja"
-        android:layout_toEndOf="@+id/button_ja"
-        android:layout_marginStart="28dp"
-        android:id="@+id/button_nein"
-        android:textAlignment="center"
-        android:layout_alignBottom="@+id/button_ja"
-        android:onClick="auslandNo" />
-
-
 
     <Button
         android:text="Zurück"
@@ -69,5 +56,17 @@
         android:onClick="auslandYes"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="NEIN"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:id="@+id/button_nein"
+        android:textAlignment="center"
+        android:onClick="auslandNo"
+        android:layout_alignBaseline="@+id/button_ja"
+        android:layout_alignBottom="@+id/button_ja"
+        android:layout_toEndOf="@+id/button_ja" />
 
 </RelativeLayout>
