Change the "Zurück"-button

--- a/app/src/main/res/layout/activity_formular06.xml
+++ b/app/src/main/res/layout/activity_formular06.xml
@@ -105,7 +105,7 @@
             android:id="@+id/button_zurueck"
             android:layout_above="@+id/progressBar"
             android:layout_alignParentStart="true"
-            android:onClick="getPrev" />
+            android:onClick="onBackPressed" />
 
         <Button
             android:text="Weiter"
