--- a/app/src/main/res/layout/activity_formular01.xml
+++ b/app/src/main/res/layout/activity_formular01.xml
@@ -12,7 +12,9 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:orientation="vertical"
@@ -93,23 +95,35 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:ems="10"
-                android:layout_below="@+id/editText_gebort"
-                android:layout_alignParentStart="true"
-                android:id="@+id/editText_famstand"
-                android:hint="Familienstand" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:ems="10"
                 android:layout_below="@+id/editText_famstand"
                 android:layout_alignParentStart="true"
                 android:id="@+id/editText_staat"
-                android:hint="Staatsangehörigkeit"
-                android:layout_marginBottom="20dp" />
+                android:hint="Staatsangehörigkeit" />
 
-                <Button
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="20dp">
+
+                <TextView
+                    android:text="Familienstand:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:id="@+id/textView_famstand"
+                    android:layout_weight="0.21"
+                    android:textSize="18sp"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="4dp" />
+
+                <Spinner
+                    android:layout_width="126dp"
+                    android:layout_height="44dp"
+                    android:id="@+id/spinner_famstand"
+                    android:layout_weight="1" />
+            </LinearLayout>
+
+            <Button
                     android:text="Load"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
