Improve the "Zurück"-button

--- a/app/src/main/res/layout/activity_formular04.xml
+++ b/app/src/main/res/layout/activity_formular04.xml
@@ -17,7 +17,7 @@
         android:id="@+id/button_zurueck"
         android:layout_above="@+id/progressBar"
         android:layout_alignParentStart="true"
-        android:onClick="onBackPressed" />
+        android:onClick="Prev" />
 
     <Button
         android:text="Weiter "
