--- a/app/src/main/res/layout/activity_formular03.xml
+++ b/app/src/main/res/layout/activity_formular03.xml
@@ -18,7 +18,7 @@
         android:id="@+id/button_zurueck"
         android:layout_above="@+id/progressBar"
         android:layout_alignParentStart="true"
-        android:onClick="onBackPressed" />
+        android:onClick="Prev" />
 
     <Button
         android:text="Weiter"
