--- a/app/src/main/res/layout/activity_formular08.xml
+++ b/app/src/main/res/layout/activity_formular08.xml
@@ -104,7 +104,7 @@
             android:id="@+id/button_zurueck"
             android:layout_above="@+id/progressBar"
             android:layout_alignParentStart="true"
-            android:onClick="onBackPressed" />
+            android:onClick="Prev" />
 
         <ProgressBar
             style="?android:attr/progressBarStyleHorizontal"
